--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon --watch \"server/**\", --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
