--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node server.mjs",
-    "dev": "nodemon --watch \"server/**\", --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.mjs\"",
+    "start": "node server.js",
+    "dev": "nodemon --watch \"server/**\", --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "deploy": "ssh user@your-server-instance-ip \"cd / && git pull && npm run build && pm2 restart server\""
