--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
