--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.18.2",
         "mongoose": "^6.9.1",
         "nodemon": "^2.0.20",
+        "path-browserify": "^1.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.1",
