--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,12 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
   "main": "server.ts",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --watch \"server/**\", --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.js\"",
+    "dev": "nodemon --watch \"server/**\" --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "deploy": "ssh user@your-server-instance-ip \"cd / && git pull && npm run build && pm2 restart server\""
