--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "mongoose": "^6.10.5",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "save": "^2.9.0",
     "url": "^0.11.0"
   },
