--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "save": "^2.9.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
