--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.10.5",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "save": "^2.9.0",
     "url": "^0.11.0",
