--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "commonjs",
   "description": "",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --watch \"server/**\" --watch \"client/**\" --ext \"ts,json,js,tsx\" --exec \"ts-node server.js\"",
@@ -36,8 +36,6 @@
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "ts-node": "^10.9.1"
   }
 }
