--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
@@ -24,6 +25,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.10.5",
     "morgan": "^1.10.0",
+    "natural": "^6.2.0",
+    "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
