--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
