--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jaames/iro": "^5.5.2",
     "@mui/material": "^5.12.1",
     "dotenv": "^16.0.3",
     "path": "^0.12.7",
