--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.11",
+    "@types/react-is": "^18.2.3",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
