--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -1,9 +1,15 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["vite.config.ts"]
-}
+    "compilerOptions": {
+      "composite": true,
+      "module": "ESNext",
+      "moduleResolution": "Node",
+      "allowSyntheticDefaultImports": true,
+      "jsx": "react-jsx",
+      "lib": ["ES2021"]
+    },
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx",
+      "vite.config.ts"
+    ]
+  }
